style.css
html, body
{
    height: 100%;
    margin: 0;
    padding: 0px;
    overflow: hidden;
}

#top_canvas
{
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
  border: 0px;
}

#canvas
{
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
  border: 0px;
}

#moving_canvas_container
{
  position: absolute;
  border: 0px solid black;
  width: 0px;
  height: 0px;
  top: 0px;
  left: 0px;
  z-index: 0;
}

#moving_canvas_selection
{
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  z-index: 2;
}

#moving_canvas
{
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  z-index: 1;
}

#image_container
{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}

.layer
{
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: -100;
}

#background
{
  width: 100%;
  height: 100%;
  z-index: -5;
  background-image: url("res/transparency_texture.png");
  background-repeat: repeat;
}

.layer_element
{
  position: relative;
  box-sizing: border-box;
  margin: 2.5%;
  width: 95%;
  border: 2px solid black;
  border-radius: 25px;
  background: rgba(127, 127, 127, 0.5);
}

.layer_thumbnail
{
  position: relative;
  width: 80%;
  height: auto;
  box-sizing: border-box;
  margin-bottom: 0%;
  margin-top: 5%;
  margin-left: 15%;
  margin-right: 5%;
  border: 0px solid gray;
  background-image: url("res/transparency_texture.png");
}

.checkbox_div
{
  position: absolute;
  float: left;
  vertical-align: middle;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.layer_name_div 
{
  position: relative;
  width: 80%;
  height: 13%;
  margin-top: 1%;
  margin-bottom: 5%;
  margin-left: 15%;
  font-size: 18px;

  overflow-y: hidden;
  overflow-x: auto;
  
}

#project_name {
  visibility: hidden;
  width: fit-content;
  block-size: fit-content;
  white-space: nowrap;
  font-size: 36px;
  
  position: absolute;
  top: 50px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);

  background-color: rgb(63, 63, 63);
  color: rgb(223, 223, 223);
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
  z-index: 1;
}

#info_div a{
  color: hotpink;
}

#info_div {
  width: fit-content;
  block-size: fit-content;
  white-space: nowrap;

  top: 100%;
  left: 40%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: rgb(63, 63, 63);
  color: rgb(223, 223, 223);
  text-align: left;
  border-radius: 6px;
  padding: 5px;

  /* Position the tooltip */
  position: absolute;
  z-index: 7;
}

#refreshSiteIcon .tooltiptext {
  width: 100px;
  top: 100%;
  left: 50%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 6;
}

#hideSidebarIcon .tooltiptext {
  width: 150px;
  top: 100%;
  left: 50%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 6;
}


#showSidebarIcon .tooltiptext {
  width: 150px;
  top: 100%;
  left: 50%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 6;
}

#nextID .tooltiptext {
  width: 70px;
  top: 100%;
  left: 25%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 6;
}


#previousID .tooltiptext {
  width: 100px;
  top: 100%;
  left: 0%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 6;
}

#showInfoIcon .tooltiptext {
  width: 100px;
  top: 100%;
  left: 40%;
  /*margin-left: -60px;*/ /* Use half of the width (120/2 = 60), to center the tooltip */
    
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 6;
}

#showInfoIcon:hover .tooltiptext {
  transition-delay: 1s;
  visibility: visible;
}
#previousID:hover .tooltiptext {
  transition-delay: 1s;
  visibility: visible;
}
#nextID:hover .tooltiptext {
  transition-delay: 1s;
  visibility: visible;
}
#showSidebarIcon:hover .tooltiptext {
  transition-delay: 1s;
  visibility: visible;
}
#refreshSiteIcon:hover .tooltiptext {
  transition-delay: 1s;
  visibility: visible;
}
#hideSidebarIcon:hover .tooltiptext {
  transition-delay: 1s;
  visibility: visible;
}

